--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "name": "server",
   "version": "1.0.0",
   "proxy": "http://localhost:4000",
@@ -14,6 +15,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.50.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
