--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
     "node-fetch": "^2.6.12"
